--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix ./client",
+    "client": "cd client && npm install && npm start ",
+    
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
