--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,7 @@
-# === Root node_modules and builds ===
+# === Root node_modules and build ===
 node_modules/
 dist/
 build/
-
-# === Ignore client-specific folders/files ===
-client/node_modules/
-client/.env
-client/.env.local
-client/.env.development
-client/.env.production
-
-# === Logs ===
-*.log
-npm-debug.log*
-yarn-debug.log*
-pnpm-debug.log*
 
 # === Environment variables ===
 .env
@@ -23,16 +10,32 @@ pnpm-debug.log*
 .env.production
 !.env.example
 
+# === Client-specific ===
+client/node_modules/
+client/build/
+client/.env
+client/.env.local
+client/.env.development
+client/.env.production
+
+# === Log files ===
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# === Coverage and test outputs ===
+coverage/
+*.tgz
+
 # === OS-specific ===
 .DS_Store
 Thumbs.db
 
-# === IDEs ===
+# === IDEs and editors ===
 .vscode/
 .idea/
 
-# === Test / coverage ===
-coverage/
-*.tgz
-
-# ==
+# === Optional: Mac/Unix hidden files ===
+*.swp
+*.swo
