--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "cd client && npm install && npm start ",
-    
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "client": "cd client && npm install && npm run build",
+    "dev": "concurrently \"npm run server\" \"cd client && npm start\""
   },
   "keywords": [],
   "author": "manjittt",
