--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.24.5",
     "axios": "^1.8.1",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.8",
     "braintree-web-drop-in-react": "^1.2.1",
     "moment": "^2.30.1",
     "react": "^19.0.0",
