--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "colors": "^1.4.0",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^4.1.0",
     "mongoose": "^8.9.6",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
+    "razorpay": "^2.9.6",
     "slugify": "^1.6.6"
   }
 }
